--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "Jinya-react",
   "description": "react test",
-  "repository": "",
+  "repository": "https://github.com/chenjinya/react-demo.git",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "build": "webpack --colors  -d --watch"
+    "dev": "webpack-dev-server --host 0.0.0.0",
+    "build": "webpack --config webpack.build.config.js --colors  -d "
   },
   "dependencies": {
     "autoprefixer": "~5.1",
+    "babel-preset-react": "^6.11.1",
     "color-diff": "~0.1.7",
     "html-webpack-plugin": "^2.22.0",
     "iconv-lite": "*",
@@ -17,17 +20,30 @@
     "parserlib": "~0.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^5.1.1",
     "babel": "^6.5.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "jsx-loader": "^0.13.2",
     "less-loader": "^2.2.3",
+    "postcss-loader": "^0.10.0",
     "react": "^15.3.0",
+    "react-addons": "^0.9.0",
     "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^2.6.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-zepto": "0.0.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
