--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "Jinya-react",
   "description": "react test",
-  "repository": "",
+  "repository": "https://github.com/chenjinya/react-demo.git",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "build": "webpack --colors  -d --watch"
+    "dev": "webpack-dev-server",
+    "build": "webpack --config webpack.build.config.js --colors  -d ",
+    "product": "gulp"
   },
   "dependencies": {
     "autoprefixer": "~5.1",
+    "babel-preset-react": "^6.11.1",
     "color-diff": "~0.1.7",
     "html-webpack-plugin": "^2.22.0",
     "iconv-lite": "*",
@@ -17,17 +21,46 @@
     "parserlib": "~0.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^5.1.1",
     "babel": "^6.5.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
     "css-loader": "^0.23.1",
-    "jsx-loader": "^0.13.2",
+    "del": "^2.2.2",
+    "file-loader": "^0.9.0",
+    "flex.css": "^1.0.5",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-gzip": "^1.4.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-prefix": "0.0.15",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-collector": "^1.0.5",
+    "gulp-sequence": "^0.4.5",
+    "gulp-tar": "^1.9.0",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.2",
     "less-loader": "^2.2.3",
+    "postcss-loader": "^0.10.0",
     "react": "^15.3.0",
+    "react-addons": "^0.9.0",
     "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^2.6.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-zepto": "0.0.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
